src/app/Pages/about/about.component.scss
@import '../../Shared-Styles/_fonts';

:host {
  display: flex;
  flex-direction: column;
  height: 90vh;
}

header {
  display: flex;
  align-items: center;
  color: white;
  background-color: rgb(244, 80, 80);;
  height: 24vh;
  padding: 2rem;
}

h1 {
  font-family: 'Waiting for the Sunrise', cursive;
  font-size: 6rem;
  font-weight: lighter;
  margin: 0;
  letter-spacing: 0.25rem;

  opacity: 0;
  transform: translateX(-30px);
  animation: fadeInFromLeft 0.5s ease-out;
  animation-fill-mode: forwards;
}

@keyframes fadeInFromLeft {
  from {
    transform: translateX(-25px);
    opacity: 0;
  }
  to {
    transform: translateX(0);
    opacity: 1;
  }
}

.about-me-container {
  display: flex;
  align-items: flex-start;
  height: 66vh;
  padding: 2rem;

  .text-column {
    width: 70%;
    padding-inline: 1rem;
    overflow-y: auto;
    max-height: 400px;
    position: relative;
    margin-right: 2rem;

    .text-navbar {
      display: flex;
      align-items: center;
      justify-content: space-around;
      position: sticky;
      padding-bottom: 1rem;
      height: 100%;
      top: 0;
      background: white;
      z-index: 10;
      transition: 0.3s;

      a {
        display: flex;
        align-items: center;
        justify-content: center;
        width: 100%;
        padding: 1rem;
        margin-right: 1rem;
        text-decoration: none;
        color: white;
        background-color: rgb(60, 72, 107);
        transition: 0.3s;

        &:hover {
          scale: 0.97;
          transition: 0.3s;
          cursor: pointer;
        }
      }
    }

    h4 {
      font-size: 1.75rem;
      margin: 0;
      padding-top: 5rem;
    }

    div[id] {
      margin-bottom: 2rem;
    }
  }

  .photo-column {
    height: 100%;
    width: 30%;
    display: flex;
    justify-content: center;
    align-items: center;

    img {
      width: 100%;
      height: 100%;
      object-fit: cover;
      object-position: center;
    }
  }
}

